--- a/webapp/client/jade/includes/form-command.jade
+++ b/webapp/client/jade/includes/form-command.jade
@@ -3,6 +3,6 @@
         h2.form-command-heading Enter command
         div.textarea
             //- label.textarea
-            textarea.form-command-textarea(name='command' placeholder='echo "Hello, PHP!"')
+            textarea.form-command-textarea(name='command' placeholder='echo "Hello, PHP!";')
         div.submit
             button.btn.btn-sm.btn-primary(type='submit') Send
